Setting: [#5] 게시글 카테고리 수정

--- a/content/2021-09-07-TIL/2021-09-07-21.09.07.til.md
+++ b/content/2021-09-07-TIL/2021-09-07-21.09.07.til.md
@@ -3,7 +3,7 @@ emoji: 📚
 title: React 데이터 흐름, Effect Hook
 date: '2021-09-07'
 author: JH8459
-categories: CodeStates TIL
+categories: TIL
 ---
 
 ![github-blog.png](../../assets/common/TIL.jpeg)
