--- a/content/2021-09-10-TIL/2021-09-10-21.09.10.til.md
+++ b/content/2021-09-10-TIL/2021-09-10-21.09.10.til.md
@@ -3,7 +3,7 @@ emoji: 📚
 title: CORS, Mini Node Server
 date: '2021-09-10'
 author: JH8459
-categories: CodeStates TIL
+categories: TIL
 ---
 
 ![github-blog.png](../../assets/common/TIL.jpeg)
