--- a/content/2021-10-15-TIL/2021-10-15-21.10.15.til.md
+++ b/content/2021-10-15-TIL/2021-10-15-21.10.15.til.md
@@ -3,7 +3,7 @@ emoji: 📚
 title: MVC, Cmarket Database
 date: '2021-10-15'
 author: JH8459
-categories: CodeStates TIL
+categories: TIL
 ---
 
 ![github-blog.png](../../assets/common/TIL.jpeg)
